@@ -20,7 +20,7 @@ public class imp {
 
     private static final String UNKNOWN_SOURCEFILE = "<unknown>";
 
-    private static final int APIVersion = 22;
+    private static final int APIVersion = 23;
 
     public static final int NO_MTIME = -1;
 
